force-app/main/default/objects/Associated_Codes__c/Associated_Codes__c.object-meta.xml
<CustomObject>
    <label>Associated Code</label>
    <nameField>
        <displayFormat>CODE-{0}</displayFormat>
        <label>Code Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Codes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>