force-app/main/default/objects/Associated_Codes__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <description>Denotes the linkage of Codes to Cases. Set manually by users and by certain automations.</description>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Associated Codes</relationshipLabel>
    <relationshipName>Associated_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>