force-app/main/default/objects/Associated_Codes__c/fields/Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Code_Description__c</fullName>
    <description>To capture code description. To be auto populated from related code library record.</description>
    <label>Code Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>