force-app/main/default/objects/Associated_Codes__c/fields/Code_Notes__c.field-meta.xml
<CustomField>
    <fullName>Code_Notes__c</fullName>
    <description>US-1160
To store notes  for codes associated with case or work order
Manually entered</description>
    <label>Code Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>