force-app/main/default/objects/Associated_Codes__c/fields/Code_Title__c.field-meta.xml
<CustomField>
    <fullName>Code_Title__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Look up field on the code library</description>
    <label>Code Title</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Code_Library__c.Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Code_Library__c</referenceTo>
    <relationshipLabel>Associated Codes (Code Title)</relationshipLabel>
    <relationshipName>Associated_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>