force-app/main/default/objects/Associated_Codes__c/fields/Code_Title_Name__c.field-meta.xml
<CustomField>
    <fullName>Code_Title_Name__c</fullName>
    <description>DCP-25223 created for defect: DCP-25579: Formula field created to show the Code Title Name field on the lightning component</description>
    <formula>Code_Title__r.Name</formula>
    <label>Code Title Name</label>
    <type>Text</type>
</CustomField>