force-app/main/default/objects/Associated_Codes__c/fields/Code_Type__c.field-meta.xml
<CustomField>
    <fullName>Code_Type__c</fullName>
    <description>US-1160
To classify the type of code
Will be selected by the user while creating codes</description>
    <label>Code Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subject</fullName>
            </value>
            <value>
                <fullName>Consequence</fullName>
            </value>
            <value>
                <fullName>Analysis</fullName>
            </value>
            <value>
                <fullName>Resolution</fullName>
            </value>
            <value>
                <fullName>Verification</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Hazard</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>