force-app/main/default/objects/Associated_Codes__c/fields/Parent_Code__c.field-meta.xml
<CustomField>
    <fullName>Parent_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Code of the code selected from Code library. To be auto populated from related code library record.</description>
    <label>Parent Code</label>
    <referenceTo>Code_Library__c</referenceTo>
    <relationshipLabel>Associated Codes (Parent Code)</relationshipLabel>
    <relationshipName>Associated_Codes1</relationshipName>
    <type>Lookup</type>
</CustomField>