force-app/main/default/objects/Associated_Codes__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US: DCP-672
Links to a Work Order</description>
    <label>Work Order</label>
    <referenceTo>SVMXC__Service_Order__c</referenceTo>
    <relationshipLabel>Associated Codes</relationshipLabel>
    <relationshipName>Associated_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>