force-app/main/default/objects/Associated_Codes__c/validationRules/CheckAccesstoUpdateCodeTitle.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckAccesstoUpdateCodeTitle</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT($Profile.Name ==$Label.Integration_SAP_Service),
NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile),
NOT($User.FirstName ==$Label.Automated_Process_User),
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
ISCHANGED(Code_Title__c),
$Profile.Name = $Label.ProfileQualityAssurance,
NOT(TEXT(Case__r.Status) = $Label.CaseStatusPendingQAReview),
NOT(ISPICKVAL(PRIORVALUE(Code_Type__c) ,&quot;Hazard&quot;))
)</errorConditionFormula>
    <errorMessage>The Associated Codes can only be edited when the Case is in Pending QA Review. Coordinate with the Case Owner if changes are needed now.</errorMessage>
</ValidationRule>