force-app/main/default/objects/Associated_Codes__c/validationRules/CheckCaseAndWorkOrderChange.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckCaseAndWorkOrderChange</fullName>
    <active>true</active>
    <description>Restrict the users to change the Case or work order on associated code</description>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    OR(
        ISCHANGED(Case__c),
        ISCHANGED(Work_Order__c)
    )
)</errorConditionFormula>
    <errorMessage>You cannot change the Case or Work Order for the Associated Code.</errorMessage>
</ValidationRule>