force-app/main/default/objects/Associated_Codes__c/validationRules/CheckCodeForBusinessIssueCase.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckCodeForBusinessIssueCase</fullName>
    <active>false</active>
    <description>Only Subject, Analysis and Resolution codes designated for Business Issue cases can be added to the Business Issue case.</description>
    <errorConditionFormula>AND(
Case__r.RecordType.Name = $Label.CaseRecordTypeBusinessIssue,	
	OR(
		TEXT(Code_Title__r.Code_Type__c) = $Label.AssociatedCodeTypeSubject,
		TEXT(Code_Title__r.Code_Type__c) = $Label.AssociatedCodeTypeAnalysis,
		TEXT(Code_Title__r.Code_Type__c) = $Label.AssociatedCodeTypeResolution
	),
	TEXT(Code_Title__r.Case_Type__c) != $Label.CaseRecordTypeBusinessIssue
)</errorConditionFormula>
    <errorMessage>Only Subject, Analysis and Resolution codes designated for Business Issue cases can be added to the Business Issue case.</errorMessage>
</ValidationRule>