force-app/main/default/objects/Associated_Codes__c/validationRules/CheckCodeForInquiryAndServiceRequestCase.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckCodeForInquiryAndServiceRequestCase</fullName>
    <active>false</active>
    <description>User should NOT be able to add an Analysis or a Resolution code to an Inquiry or Service Request case.</description>
    <errorConditionFormula>AND( 
OR( 
TEXT(Code_Title__r.Code_Type__c) =  $Label.AssociatedCodeTypeAnalysis,
TEXT(Code_Title__r.Code_Type__c) = $Label.AssociatedCodeTypeResolution 
), 
OR(
Case__r.RecordType.Name = $Label.CaseRecordTypeInquiry, 
Case__r.RecordType.Name = $Label.CaseRecordTypeServiceRequest
) 
)</errorConditionFormula>
    <errorMessage>Analysis or a Resolution code cannot be added for Inquiry and Service Request case.</errorMessage>
</ValidationRule>