force-app/main/default/objects/Associated_Codes__c/validationRules/CheckHazardCodeOnBussinessIssueCase.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckHazardCodeOnBussinessIssueCase</fullName>
    <active>false</active>
    <description>Allow only QA users to add the Hazard Code to Business Issue Cases with Sub Type as Complaint</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Case__c)),
	NOT(
		AND(
			$Profile.Name == $Label.ProfileQualityAssurance,
			Case__r.RecordType.Name == $Label.CaseRecordTypeBusinessIssue,
			ISPICKVAL(Case__r.Sub_Type__c, &quot;Complaint&quot;)
		)
	),
	OR(
		ISPICKVAL(Code_Title__r.Code_Type__c, &quot;Hazard&quot;),
		ISPICKVAL(Code_Type__c, &quot;Hazard&quot;)
	)
)</errorConditionFormula>
    <errorMessage>Hazard codes can only be added to a Business Issue case with sub type of &apos;Complaint&apos; and can only be added by QA user.</errorMessage>
</ValidationRule>