force-app/main/default/objects/Associated_Codes__c/validationRules/CheckHazardCodeOnWorkOrder.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckHazardCodeOnWorkOrder</fullName>
    <active>false</active>
    <description>Prevent addition of Hazard code on Work Order</description>
    <errorConditionFormula>AND(
	NOT(ISBLANK(Work_Order__c)),
	OR(
		ISPICKVAL(Code_Title__r.Code_Type__c, &quot;Hazard&quot;),
		ISPICKVAL(Code_Type__c, &quot;Hazard&quot;)
	)
)</errorConditionFormula>
    <errorMessage>Hazard Codes can not be added to Work Order. They can only be added to Business Issue - Complaint cases.</errorMessage>
</ValidationRule>