force-app/main/default/objects/Associated_Codes__c/validationRules/CheckIsInactiveCheckboxTrue.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckIsInactiveCheckboxTrue</fullName>
    <active>true</active>
    <description>If this checkbox is checked, then the code cannot get added to any case or work order.</description>
    <errorConditionFormula>Code_Title__r.Inactive__c = true</errorConditionFormula>
    <errorMessage>The code cannot be added to any case or work order</errorMessage>
</ValidationRule>