force-app/main/default/objects/Associated_Codes__c/validationRules/CheckRequiredFieldsOnOtherCode.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckRequiredFieldsOnOtherCode</fullName>
    <active>true</active>
    <description>If the code selected is Other, Code type and comments are mandatory</description>
    <errorConditionFormula>AND(
    Code_Title__r.Name = &quot;Other&quot;,
    OR(
        ISBLANK( TEXT(Code_Type__c) ),
        ISBLANK( Comments__c )
    )
)</errorConditionFormula>
    <errorMessage>Please populate Code Type and Comments for Other Code.</errorMessage>
</ValidationRule>