force-app/main/default/objects/Associated_Codes__c/validationRules/Logistics_Profile_Edit_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Logistics_Profile_Edit_Restriction</fullName>
    <active>true</active>
    <description>Restricts &quot;Logistics&quot; profile users from editing records with non-&quot;Logistics&quot; code types.</description>
    <errorConditionFormula>AND(
NOT($Profile.Name ==$Label.Integration_SAP_Service),
NOT($Profile.Name == $Label.Integration_Service_SNAP_Profile),
NOT($User.FirstName ==$Label.Automated_Process_User),
NOT($Setup.cs_Apex_Settings__c.Bypass_All_Validations__c),
$Profile.Name == $Label.Profile_Service_Logistics,
NOT ISNEW(),
ISCHANGED(Code_Title__c),
NOT (
    AND (
      ISPICKVAL(PRIORVALUE(Code_Type__c),&quot;Logistics&quot;),
        OR (
          ISPICKVAL(Code_Title__r.Code_Type__c,&quot;Product&quot;),
          ISPICKVAL(Code_Title__r.Code_Type__c,&quot;Logistics&quot;)
           )
     )
   )
)</errorConditionFormula>
    <errorMessage>Logistics team can only edit logistics codes. Edit a logistics code OR if Subject or Resolution needs to be updated reach out to Case Owner.</errorMessage>
</ValidationRule>